lib/src/godot_core_bindings.g.dart

// Generated by package:ffigen from native/godot_core/godot_core.h. Do not edit by hand; run
// `dart run ffigen --config ffigen.yaml` from the repo root to regenerate.

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// FFI bindings for native/godot_core/godot_core.h. Generated; do not edit by hand.
///
class GodotCoreBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  GodotCoreBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  GodotCoreBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  GDExtensionInitializationFunction godot_core_prepare_init_func(
    GDExtensionInitializationFunction p_delegate_init_func,
  ) {
    return _godot_core_prepare_init_func(p_delegate_init_func);
  }

  late final _godot_core_prepare_init_funcPtr =
      _lookup<
        ffi.NativeFunction<
          GDExtensionInitializationFunction Function(
            GDExtensionInitializationFunction,
          )
        >
      >('godot_core_prepare_init_func');
  late final _godot_core_prepare_init_func = _godot_core_prepare_init_funcPtr
      .asFunction<
        GDExtensionInitializationFunction Function(
          GDExtensionInitializationFunction,
        )
      >();

  GodotCoreHandle godot_core_create(
    int p_argc,
    ffi.Pointer<ffi.Pointer<ffi.Char>> p_argv,
    GDExtensionInitializationFunction p_init_func,
  ) {
    return _godot_core_create(p_argc, p_argv, p_init_func);
  }

  late final _godot_core_createPtr =
      _lookup<
        ffi.NativeFunction<
          GodotCoreHandle Function(
            ffi.Int,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            GDExtensionInitializationFunction,
          )
        >
      >('godot_core_create');
  late final _godot_core_create = _godot_core_createPtr
      .asFunction<
        GodotCoreHandle Function(
          int,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          GDExtensionInitializationFunction,
        )
      >();

  bool godot_core_start(GodotCoreHandle p_handle) {
    return _godot_core_start(p_handle);
  }

  late final _godot_core_startPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(GodotCoreHandle)>>(
        'godot_core_start',
      );
  late final _godot_core_start = _godot_core_startPtr
      .asFunction<bool Function(GodotCoreHandle)>();

  void godot_core_destroy(GodotCoreHandle p_handle) {
    return _godot_core_destroy(p_handle);
  }

  late final _godot_core_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(GodotCoreHandle)>>(
        'godot_core_destroy',
      );
  late final _godot_core_destroy = _godot_core_destroyPtr
      .asFunction<void Function(GodotCoreHandle)>();

  bool godot_core_resize(GodotCoreHandle p_handle, int p_width, int p_height) {
    return _godot_core_resize(p_handle, p_width, p_height);
  }

  late final _godot_core_resizePtr =
      _lookup<
        ffi.NativeFunction<ffi.Bool Function(GodotCoreHandle, ffi.Int, ffi.Int)>
      >('godot_core_resize');
  late final _godot_core_resize = _godot_core_resizePtr
      .asFunction<bool Function(GodotCoreHandle, int, int)>();

  void godot_core_set_frame_callback(
    GodotCoreHandle p_handle,
    GodotOffscreenFrameCallback p_callback,
    ffi.Pointer<ffi.Void> p_userdata,
  ) {
    return _godot_core_set_frame_callback(p_handle, p_callback, p_userdata);
  }

  late final _godot_core_set_frame_callbackPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            GodotCoreHandle,
            GodotOffscreenFrameCallback,
            ffi.Pointer<ffi.Void>,
          )
        >
      >('godot_core_set_frame_callback');
  late final _godot_core_set_frame_callback = _godot_core_set_frame_callbackPtr
      .asFunction<
        void Function(
          GodotCoreHandle,
          GodotOffscreenFrameCallback,
          ffi.Pointer<ffi.Void>,
        )
      >();

  bool godot_core_iteration(GodotCoreHandle p_handle) {
    return _godot_core_iteration(p_handle);
  }

  late final _godot_core_iterationPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(GodotCoreHandle)>>(
        'godot_core_iteration',
      );
  late final _godot_core_iteration = _godot_core_iterationPtr
      .asFunction<bool Function(GodotCoreHandle)>();
}

typedef GodotCoreHandle = ffi.Pointer<ffi.Void>;
typedef GDExtensionBool = ffi.Uint8;
typedef DartGDExtensionBool = int;

enum GDExtensionInitializationLevel {
  GDEXTENSION_INITIALIZATION_CORE(0),
  GDEXTENSION_INITIALIZATION_SERVERS(1),
  GDEXTENSION_INITIALIZATION_SCENE(2),
  GDEXTENSION_INITIALIZATION_EDITOR(3),
  GDEXTENSION_MAX_INITIALIZATION_LEVEL(4);

  final int value;
  const GDExtensionInitializationLevel(this.value);

  static GDExtensionInitializationLevel fromValue(int value) => switch (value) {
    0 => GDEXTENSION_INITIALIZATION_CORE,
    1 => GDEXTENSION_INITIALIZATION_SERVERS,
    2 => GDEXTENSION_INITIALIZATION_SCENE,
    3 => GDEXTENSION_INITIALIZATION_EDITOR,
    4 => GDEXTENSION_MAX_INITIALIZATION_LEVEL,
    _ => throw ArgumentError(
      'Unknown value for GDExtensionInitializationLevel: $value',
    ),
  };
}

final class GDExtensionInitialization extends ffi.Struct {
  @ffi.UnsignedInt()
  external int minimum_initialization_levelAsInt;

  GDExtensionInitializationLevel get minimum_initialization_level =>
      GDExtensionInitializationLevel.fromValue(
        minimum_initialization_levelAsInt,
      );

  external ffi.Pointer<ffi.Void> userdata;

  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Void> p_userdata,
        ffi.UnsignedInt p_level,
      )
    >
  >
  initialize;

  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Void> p_userdata,
        ffi.UnsignedInt p_level,
      )
    >
  >
  deinitialize;
}

typedef GDExtensionInitializationFunction =
    ffi.Pointer<
      ffi.NativeFunction<
        GDExtensionBool Function(
          ffi.Pointer<
            ffi.NativeFunction<
              ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>> Function(
                ffi.Pointer<ffi.Char> p_function_name,
              )
            >
          >
          p_get_proc_address,
          ffi.Pointer<ffi.Void> p_library,
          ffi.Pointer<GDExtensionInitialization> r_initialization,
        )
      >
    >;

/// @name GodotOffscreenSurfaceType
/// @since 4.6
///
/// Identifies which member of GodotOffscreenFrame::surface is populated. One display driver
/// (and therefore one platform) only ever produces one of these.
enum GodotOffscreenSurfaceType {
  GODOT_OFFSCREEN_SURFACE_TYPE_IOSURFACE(0),
  GODOT_OFFSCREEN_SURFACE_TYPE_DMABUF(1),
  GODOT_OFFSCREEN_SURFACE_TYPE_AHARDWAREBUFFER(2),
  GODOT_OFFSCREEN_SURFACE_TYPE_D3D11_SHARED_HANDLE(3);

  final int value;
  const GodotOffscreenSurfaceType(this.value);

  static GodotOffscreenSurfaceType fromValue(int value) => switch (value) {
    0 => GODOT_OFFSCREEN_SURFACE_TYPE_IOSURFACE,
    1 => GODOT_OFFSCREEN_SURFACE_TYPE_DMABUF,
    2 => GODOT_OFFSCREEN_SURFACE_TYPE_AHARDWAREBUFFER,
    3 => GODOT_OFFSCREEN_SURFACE_TYPE_D3D11_SHARED_HANDLE,
    _ => throw ArgumentError(
      'Unknown value for GodotOffscreenSurfaceType: $value',
    ),
  };
}

final class UnnamedStruct extends ffi.Struct {
  @ffi.Uint32()
  external int iosurface_id;
}

final class UnnamedStruct$1 extends ffi.Struct {
  @ffi.Int()
  external int fd;

  @ffi.Uint32()
  external int drm_format;

  @ffi.Uint32()
  external int stride;

  @ffi.Uint32()
  external int offset;

  @ffi.Uint64()
  external int modifier;
}

final class UnnamedStruct$2 extends ffi.Struct {
  external ffi.Pointer<ffi.Void> hardware_buffer;
}

final class UnnamedStruct$3 extends ffi.Struct {
  external ffi.Pointer<ffi.Void> shared_handle;

  @ffi.Uint64()
  external int fence_value;
}

final class UnnamedUnion extends ffi.Union {
  external UnnamedStruct iosurface;

  external UnnamedStruct$1 dmabuf;

  external UnnamedStruct$2 ahardwarebuffer;

  external UnnamedStruct$3 d3d11;
}

/// @name GodotOffscreenFrame
/// @since 4.6
///
/// Describes a single rendered frame delivered by \ref libgodot_godot_instance_set_offscreen_frame_callback,
/// for the "offscreen" display driver. The underlying native surface/buffer is owned by the
/// engine and reused across frames from a small fixed-size ring (double/triple buffered); the
/// engine does not, in general, wait for the host to finish reading a buffer before reusing its
/// ring slot — see the per-platform notes on `surface` below for what (if anything) each
/// backend does to avoid the engine writing a buffer the host is still reading.
final class GodotOffscreenFrame extends ffi.Struct {
  @ffi.UnsignedInt()
  external int typeAsInt;

  GodotOffscreenSurfaceType get type =>
      GodotOffscreenSurfaceType.fromValue(typeAsInt);

  @ffi.Uint32()
  external int width;

  @ffi.Uint32()
  external int height;

  external UnnamedUnion surface;
}

typedef GodotOffscreenFrameCallback =
    ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(
          ffi.Pointer<ffi.Void> p_userdata,
          ffi.Pointer<GodotOffscreenFrame> p_frame,
        )
      >
    >;
